--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,24 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
+  <ion-toolbar> <ion-title> Marvel vs DC Comics </ion-title> </ion-toolbar>
 </ion-header>
-
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="small" color="danger" collapse="condense"
+        >Marvel vs DC Comics</ion-title
+      >
     </ion-toolbar>
   </ion-header>
-
   <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <ion-card>
+      <ion-card-header>
+        <ion-img
+          src="https://i.pinimg.com/736x/0b/79/2b/0b792b7f8fad44ed922780d3472288ca.jpg"
+        >
+        </ion-img>
+      </ion-card-header>
+      <ion-title color="tertiary"> Marvel vs DC Comics </ion-title>
+      <ion-card-content></ion-card-content>
+    </ion-card>
   </div>
 </ion-content>
